--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/images/download.jpeg">
-  <title>My list</title>
+
+  <title>My Shopping list</title>
 </head>
 
 <body>
@@ -17,11 +18,43 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./index.html">List</a></li>
-          <li><a href="./add-article.html">List</a></li>
+          <li><a href="./add-article.html">Add article</a></li>
         </ul>
       </nav>
     </header>
   </div>
+  <main>
+    <div class="container-main">
+      <section>
+        <i></i>
+        <span> 2/3 bought</span>
+      </section>
+      <section>
+        <div class="checkbox">
+          <input type="checkbox">
+          <label for="bread">Bread</label>
+          <input type="checkbox">
+          <label for="sugar">Sugar</label>
+          <input type="checkbox">
+          <label for="milk">Milk</label>
+          <input type="checkbox">
+          <label for="tofu">Tofu</label>
+        </div>
+      </section>
+      <section>
+        <ul class="prices">
+          <li>0.75 €</li><i></i>
+          <li></li><i></i>
+          <li>1.20 €</li><i></i>
+          <li>4.35 €</li><i></i>
+        </ul>
+      </section>
+    </div>
+    <span>4.35 €</span>
+    <div>
+
+    </div>
+  </main>
 </body>
 
 </html>
