--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/images/download.jpeg">
-
+  <link type="text/css" href="style.css" rel="stylesheet">
   <title>My Shopping list</title>
 </head>
 
