--- a/src/add-article.html
+++ b/src/add-article.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/images/download.jpeg">
-  <link type="text/css" href="style.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="./images/download.jpeg">
+  <link href="style.css" rel="stylesheet">
   <title>My list</title>
 </head>
 
