Link icons to css add icons to html files

--- a/src/add-article.html
+++ b/src/add-article.html
@@ -24,6 +24,10 @@
     </header>
   </div>
   <main>
+    <section>
+      <i class="fa-solid fa-circle-minus"></i>
+      <span> 2/3 bought</span>
+    </section>
     <form>Añadir artículo
       <label for="name">Name:</label>
       <input type="text" name="name">
