--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <main>
     <div class="container-main">
       <section>
-        <i></i>
+        <i class="fa-solid fa-circle-plus"></i>
         <span> 2/3 bought</span>
       </section>
       <section>
