Modify css to add colour and basic structure

--- a/src/add-article.html
+++ b/src/add-article.html
@@ -24,7 +24,7 @@
     </header>
   </div>
   <main>
-    <section>
+    <section class="container-top">
       <i class="fa-solid fa-circle-minus"></i>
       <span> 2/3 bought</span>
     </section>
