--- a/src/index.html
+++ b/src/index.html
@@ -24,35 +24,35 @@
     </header>
   </div>
   <main>
-    <div class="container-main">
-      <section>
-        <i class="fa-solid fa-circle-plus"></i>
-        <span> 2/3 bought</span>
-      </section>
-      <section>
-        <div class="checkbox">
-          <input type="checkbox">
-          <label for="bread">Bread</label>
-          <input type="checkbox">
-          <label for="sugar">Sugar</label>
-          <input type="checkbox">
-          <label for="milk">Milk</label>
-          <input type="checkbox">
-          <label for="tofu">Tofu</label>
-        </div>
-      </section>
-      <section>
-        <ul class="prices">
-          <li>0.75 €</li><i></i>
-          <li></li><i></i>
-          <li>1.20 €</li><i></i>
-          <li>4.35 €</li><i></i>
-        </ul>
-      </section>
+    <section class="container-top">
+      <i class="fa-solid fa-circle-plus"></i>
+      <span> 2/3 bought</span>
+    </section>
+    <div class="container-main"></div>
+    <section>
+      <div class="checkbox">
+        <input type="checkbox">
+        <label for="bread">Bread</label>
+        <input type="checkbox">
+        <label for="sugar">Sugar</label>
+        <input type="checkbox">
+        <label for="milk">Milk</label>
+        <input type="checkbox">
+        <label for="tofu">Tofu</label>
+      </div>
+    </section>
+    <section>
+      <ul class="prices">
+        <li>0.75 €</li><i></i>
+        <li></li><i></i>
+        <li>1.20 €</li><i></i>
+        <li>4.35 €</li><i></i>
+      </ul>
+    </section>
     </div>
-    <span>4.35 €</span>
-    <div>
 
+    <div>
+      <span>4.35 €</span>
     </div>
   </main>
 </body>
